Implement login and signup APIs with JWT auth and password hasing

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,9 @@
+# Port backend server runs on
 PORT = 3000
+
+# MongoDB connection string
+MONGODB_URI = mongodb+srv://sunnyk:NhtIRQcpdWe4Pv9n@cluster0.ebqjfbc.mongodb.net/wastewatch_db?
+retryWrites=true&w=majority&appName=Cluster0
+
+#Secret key used to sign JWT tokens 
+JWT_SECRET = "3f9d8b6a-2c7e-4f1b-9c2a-5e7f1a4b9d2e"
